--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "nodemon server.js"
   },
   "engines": {
-    "node": ">=18"
+    "node": "18.x"
   },
   "keywords": [],
   "author": "",
